# ray_tracing

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: hittable.h  hittable_list.h  main.cc  material.h  sphere.h
src/common/: camera.h  color.h  ray.h  utility.h  vec3.h
